{
  "version": 4,
  "terraform_version": "0.14.6",
  "serial": 495,
  "lineage": "ed59955c-70b1-79c9-ca48-edb598f808fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo1_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-00da2f3951f3866a6",
            "network_border_group": "eu-west-3",
            "public_dns": "ec2-13-36-113-37.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.36.113.37",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.demo1_internet_gateway",
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo1_centos1_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ee45f96ce686f98",
            "arn": "arn:aws:ec2:eu-west-3:306891754974:instance/i-034c2dba898baa638",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-034c2dba898baa638",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eu-west-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03675aea2e924db77",
            "private_dns": "ip-10-0-30-204.eu-west-3.compute.internal",
            "private_ip": "10.0.30.204",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-082f708ee80eac96e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08e8d1fdac6f3e96a",
            "tags": {
              "Name": "demo1-centos1-private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042e157a63498a51f"
            ]
          },
          "dependencies": [
            "aws_security_group.demo1_prvt_sg",
            "aws_subnet.demo1_prvt_subnet_1",
            "aws_vpc.demo1_vpc",
            "data.aws_ami.latest_centos_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo1_centos1_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ee45f96ce686f98",
            "arn": "arn:aws:ec2:eu-west-3:306891754974:instance/i-0a331948b8a1d19a5",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a331948b8a1d19a5",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eu-west-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0311cf645e6898c11",
            "private_dns": "ip-10-0-10-83.eu-west-3.compute.internal",
            "private_ip": "10.0.10.83",
            "public_ip": "52.47.154.17",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-088e2f46a504c4c7c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099c1ffdf7e512732",
            "tags": {
              "Name": "demo1-centos1-public"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d3541ea0d4cceb0"
            ]
          },
          "dependencies": [
            "aws_instance.demo1_centos1_private",
            "aws_security_group.demo1_prvt_sg",
            "aws_security_group.demo1_pub_sg",
            "aws_subnet.demo1_prvt_subnet_1",
            "aws_subnet.demo1_pub_subnet_1",
            "aws_vpc.demo1_vpc",
            "data.aws_ami.latest_centos_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo1_centos2_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ee45f96ce686f98",
            "arn": "arn:aws:ec2:eu-west-3:306891754974:instance/i-0788984314a77028f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0788984314a77028f",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eu-west-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fb924f77113caca8",
            "private_dns": "ip-10-0-40-165.eu-west-3.compute.internal",
            "private_ip": "10.0.40.165",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-014691cbf961e7e4e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fe67ca9eaea6aa7",
            "tags": {
              "Name": "demo1-centos2-private"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-042e157a63498a51f"
            ]
          },
          "dependencies": [
            "aws_security_group.demo1_prvt_sg",
            "aws_subnet.demo1_prvt_subnet_2",
            "aws_vpc.demo1_vpc",
            "data.aws_ami.latest_centos_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo1_centos2_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02ee45f96ce686f98",
            "arn": "arn:aws:ec2:eu-west-3:306891754974:instance/i-065e31918b632ba65",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065e31918b632ba65",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "eu-west-demo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f7b1488a0fa467ed",
            "private_dns": "ip-10-0-20-79.eu-west-3.compute.internal",
            "private_ip": "10.0.20.79",
            "public_ip": "15.237.112.124",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03f1276cd0c45f6f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f99de5c1cfa662c",
            "tags": {
              "Name": "demo1-centos2-public"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d3541ea0d4cceb0"
            ]
          },
          "dependencies": [
            "aws_instance.demo1_centos1_private",
            "aws_instance.demo1_centos2_private",
            "aws_security_group.demo1_prvt_sg",
            "aws_security_group.demo1_pub_sg",
            "aws_subnet.demo1_prvt_subnet_1",
            "aws_subnet.demo1_prvt_subnet_2",
            "aws_subnet.demo1_pub_subnet_2",
            "aws_vpc.demo1_vpc",
            "data.aws_ami.latest_centos_image"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo1_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:internet-gateway/igw-03b9c3db4b32d4cb1",
            "id": "igw-03b9c3db4b32d4cb1",
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo1-igw"
            },
            "vpc_id": "vpc-050395861c3968bb8"
          },
          "dependencies": [
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo1_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00da2f3951f3866a6",
            "id": "nat-0d858fded9bf01e30",
            "network_interface_id": "eni-0ca940b8e1092176e",
            "private_ip": "10.0.10.36",
            "public_ip": "13.36.113.37",
            "subnet_id": "subnet-099c1ffdf7e512732",
            "tags": {
              "Name": "demo1-nat"
            }
          },
          "dependencies": [
            "aws_eip.demo1_nat_eip",
            "aws_internet_gateway.demo1_internet_gateway",
            "aws_subnet.demo1_pub_subnet_1",
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo1_prvt_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-016cc4854a7a72a92",
            "owner_id": "306891754974",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0d858fded9bf01e30",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo1-prvt-rtb"
            },
            "vpc_id": "vpc-050395861c3968bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.demo1_nat_eip",
            "aws_internet_gateway.demo1_internet_gateway",
            "aws_nat_gateway.demo1_nat",
            "aws_subnet.demo1_pub_subnet_1",
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo1_pub_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0877a8924ed5f0f33",
            "owner_id": "306891754974",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b9c3db4b32d4cb1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo1-pub-rtb"
            },
            "vpc_id": "vpc-050395861c3968bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demo1_internet_gateway",
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo1_prvt_rtb_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b5da04c0ebba076e",
            "route_table_id": "rtb-016cc4854a7a72a92",
            "subnet_id": "subnet-08e8d1fdac6f3e96a"
          },
          "dependencies": [
            "aws_eip.demo1_nat_eip",
            "aws_internet_gateway.demo1_internet_gateway",
            "aws_nat_gateway.demo1_nat",
            "aws_route_table.demo1_prvt_route_table",
            "aws_subnet.demo1_prvt_subnet_1",
            "aws_subnet.demo1_pub_subnet_1",
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo1_prvt_rtb_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077dfce77339b8b0f",
            "route_table_id": "rtb-016cc4854a7a72a92",
            "subnet_id": "subnet-07fe67ca9eaea6aa7"
          },
          "dependencies": [
            "aws_eip.demo1_nat_eip",
            "aws_internet_gateway.demo1_internet_gateway",
            "aws_nat_gateway.demo1_nat",
            "aws_route_table.demo1_prvt_route_table",
            "aws_subnet.demo1_prvt_subnet_2",
            "aws_subnet.demo1_pub_subnet_1",
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo1_pub_rtb_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd1528c1baa2f24a",
            "route_table_id": "rtb-0877a8924ed5f0f33",
            "subnet_id": "subnet-099c1ffdf7e512732"
          },
          "dependencies": [
            "aws_internet_gateway.demo1_internet_gateway",
            "aws_route_table.demo1_pub_route_table",
            "aws_subnet.demo1_pub_subnet_1",
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo1_pub_rtb_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033e8650879ce1f1e",
            "route_table_id": "rtb-0877a8924ed5f0f33",
            "subnet_id": "subnet-07f99de5c1cfa662c"
          },
          "dependencies": [
            "aws_internet_gateway.demo1_internet_gateway",
            "aws_route_table.demo1_pub_route_table",
            "aws_subnet.demo1_pub_subnet_2",
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1_prvt_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:security-group/sg-042e157a63498a51f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042e157a63498a51f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.10.0/24",
                  "10.0.20.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo1_prvt_sg",
            "name_prefix": "",
            "owner_id": "306891754974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo1-private_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-050395861c3968bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo1_pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:security-group/sg-09d3541ea0d4cceb0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d3541ea0d4cceb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "demo1_pub_sg",
            "name_prefix": "",
            "owner_id": "306891754974",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo1-public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-050395861c3968bb8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1_prvt_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:subnet/subnet-08e8d1fdac6f3e96a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-08e8d1fdac6f3e96a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo1-prvt-subnet-1"
            },
            "vpc_id": "vpc-050395861c3968bb8"
          },
          "dependencies": [
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1_prvt_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:subnet/subnet-07fe67ca9eaea6aa7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.40.0/24",
            "id": "subnet-07fe67ca9eaea6aa7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo1-prvt-subnet-2"
            },
            "vpc_id": "vpc-050395861c3968bb8"
          },
          "dependencies": [
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1_pub_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:subnet/subnet-099c1ffdf7e512732",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-099c1ffdf7e512732",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo1-pub-subnet-1"
            },
            "vpc_id": "vpc-050395861c3968bb8"
          },
          "dependencies": [
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo1_pub_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:subnet/subnet-07f99de5c1cfa662c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-07f99de5c1cfa662c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo1-pub-subnet-2"
            },
            "vpc_id": "vpc-050395861c3968bb8"
          },
          "dependencies": [
            "aws_vpc.demo1_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo1_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:306891754974:vpc/vpc-050395861c3968bb8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-022deeac029c030dd",
            "default_route_table_id": "rtb-00dbb5b6f4e8fa398",
            "default_security_group_id": "sg-0357586ddf6808a33",
            "dhcp_options_id": "dopt-86e42bee",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-050395861c3968bb8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00dbb5b6f4e8fa398",
            "owner_id": "306891754974",
            "tags": {
              "Name": "demo1-vpc"
            }
          }
        }
      ]
    }
  ]
}